/*
 * Copyright (C) 2020-2021 Lightbend Inc. <https://www.lightbend.com>
 * Copyright (C) 2021 Ismael Hamed <https://github.com/ismaelhamed>
 */

 syntax = "proto2";

 package Akka.Projections; 

 option csharp_namespace = "Akka.Projections.ProjectionMessages";
 
 message ProjectionId {
   required string name = 1;
   required string key = 2;
 }
 
 message GetOffset {
   required ProjectionId projectionId = 1;
   required string replyTo = 2;
 }
 
 message CurrentOffset {
   required ProjectionId projectionId = 1;
   optional Offset offset = 2;
 }
 
 message SetOffset {
   required ProjectionId projectionId = 1;
   required string replyTo = 2;
   optional Offset offset = 3;
 }
 
 message Offset {
   required string manifest = 1;
   required string value = 2;
 }
 
 message IsPaused {
   required ProjectionId projectionId = 1;
   required string replyTo = 2;
 }
 
 message SetPaused {
   required ProjectionId projectionId = 1;
   required string replyTo = 2;
   optional bool paused = 3;
 }